--- a/src/dlt_postgres.ipynb
+++ b/src/dlt_postgres.ipynb
@@ -33,7 +33,7 @@
     "    return (\n",
     "        spark.read.table('postgres_catalog.public.customer')\n",
     "            .select('CustomerID', 'FirstName', 'LastName')\n",
-    "            # .filter(F.col('FirstName') != 'Walter')\n",
+    "            .filter(F.col('FirstName') != 'Walter')\n",
     "    )\n",
     "\n",
     "@dlt.table\n",
